--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,10 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">QuickBox</string>
-    <string name="sign_in">Sign In</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="title_activity_home" translatable="false">Home</string>
     <string name="don_t_have_account_yet">Don\'t have account yet?</string>
     <string name="create">Create</string>
+    <string name="sign_up">Sign Up</string>
     <string name="please_fill_all_the_fields_below">Please fill all the fields below</string>
     <string name="enter_email">Enter email</string>
     <string name="enter_street_and_street_number">Enter street and street number</string>
@@ -14,6 +12,5 @@
     <string name="welcome_back_you_ve_been_missed">Welcome Back, You’ve been missed.</string>
     <string name="enter_your_email">Enter your email</string>
     <string name="enter_your_password">Enter your password</string>
-    <string name="logo" translatable="false">logo\n</string>
-    <string name="map" translatable="false">map</string>
+    <string name="sign_in">Sign In</string>
 </resources>
