--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,4 +25,6 @@
     <string name="signout">Sign Out</string>
     <string name="darkmode">Dark Mode</string>
     <string name="lightmode">Light Mode</string>
+    <string name="english">English</string>
+    <string name="slovak">Slovak</string>
 </resources>
