--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="qrScan" translatable="false">QR Scan</string>
     <string name="economy">Economy</string>
     <string name="fast">Fast</string>
-    <string name="superfast">Superfast</string>
+    <string name="standard">Standard</string>
     <string name="delType">Choose delivery type</string>
     <string name="enter_receivIDText">Enter receiver ID or scan QR code</string>
     <string name="noteText">Note (optional)</string>
