create delivery done

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,7 +13,7 @@
     <string name="enter_your_email">Enter your email</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="sign_in">Sign In</string>
-    <string name="create_delivery">Create delivery</string>
+    <string name="create_delivery">Send package</string>
     <string name="errorsignin">Email or password is incorrect</string>
     <string name="errorsignup">Account already exists</string>
     <string name="emailenter">Email is required</string>
@@ -34,8 +34,10 @@
     <string name="economy">Economy</string>
     <string name="fast">Fast</string>
     <string name="standard">Standard</string>
-    <string name="superfast">Superfast</string>
     <string name="delType">Choose delivery type</string>
-    <string name="enter_receivIDText">Enter receiver ID or scan QR code</string>
+    <string name="enter_receivIDText">Enter ID or scan QR code</string>
     <string name="noteText">Note (optional)</string>
+    <string name="invalid">Invalid receiver\'s ID</string>
+    <string name="fields">Please fill all the fields</string>
+    <string name="welcome">"Welcome back, "</string>
 </resources>
