--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -13,7 +13,7 @@
     <string name="enter_password">Zadajte heslo</string>
     <string name="enter_name">Zadajte meno</string>
     <string name="welcome_back_you_ve_been_missed">Vitajte späť.</string>
-    <string name="create_delivery">Vytvoriť dodávku</string>
+    <string name="create_delivery">Poslať balík</string>
     <string name="errorsignin">Nesprávny email alebo heslo</string>
     <string name="errorsignup">Účet už existuje</string>
     <string name="emailenter">Je vyžadovaný email</string>
@@ -34,8 +34,10 @@
     <string name="economy">Ekonomická</string>
     <string name="fast">Rýchla</string>
     <string name="standard">Štandardná</string>
-    <string name="superfast">Super rýchla</string>
     <string name="delType">Zvoľte typ prepravy</string>
-    <string name="enter_receivIDText">Zadajte ID príjemcu alebo naskenujte QR kód</string>
+    <string name="enter_receivIDText">Zadajte ID alebo naskenujte QR kód</string>
     <string name="noteText">Poznámka (voliteľné)</string>
+    <string name="invalid">Nesprávne ID príjemcu</string>
+    <string name="fields">Vyplňte všteky polia prosím</string>
+    <string name="welcome">"Vitajte späť, "</string>
 </resources>
