home screen almost done

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,4 +40,7 @@
     <string name="invalid">Invalid receiver\'s ID</string>
     <string name="fields">Please fill all the fields</string>
     <string name="welcome">"Welcome back, "</string>
+    <string name="changeLang">Change language</string>
+    <string name="delivery_history">Delivery history</string>
+    <string name="delete">Delete</string>
 </resources>
