--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -57,4 +57,5 @@
     <string name="nearby">Neďaleko</string>
     <string name="sentS">Poslané</string>
     <string name="noitems">Žiadne položky</string>
+    <string name="confirm">Potvrdiť</string>
 </resources>
