--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -58,4 +58,5 @@
     <string name="sentS">Sent</string>
     <string name="noitems">No items</string>
     <string name="confirm">Confirm</string>
+    <string name="nodelnearby">No deliveries nearby</string>
 </resources>
