--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -59,4 +59,6 @@
     <string name="noitems">No items</string>
     <string name="confirm">Confirm</string>
     <string name="nodelnearby">No deliveries nearby</string>
+    <string name="backRunnig">App is running in background</string>
+    <string name="map">Map</string>
 </resources>
