--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,4 +61,5 @@
     <string name="nodelnearby">No deliveries nearby</string>
     <string name="backRunnig">App is running in background</string>
     <string name="map">Map</string>
+    <string name="selectlocation">Please select location</string>
 </resources>
